Get food by id (#19)
* create getListFood method

* Fix integration tests

* Fix build